Don't restore in LayoutBlock::layout if clamping is delayed.

BUG=624534
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2220133002
Cr-Commit-Position: refs/heads/master@{#412450}

Former-commit-id: 0cd0e9c225f682449743476969ced1ab51e6b1eb